--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,12 @@
     <%= f.input :password_confirmation,
                 required: true,
                 input_html: { autocomplete: "new-password" } %>
+    <%= f.input :name %>
+    <%= f.input :last_name %>
+    <%= f.input :phone %>
+    <%= f.input :specialty %>
   </div>
+
 
   <div class="form-actions">
     <%= f.button :submit, "Sign up" %>
